# webapp-ssr

./: .env.example  .gitignore  Cargo.toml  README.md  tailwind.config.js
.cargo/: config.toml
app/: Cargo.toml  tailwind.config.js
app/src/: error.rs  lib.rs  utils.rs
app/src/components/: error_alert.rs  login_form.rs  mod.rs
app/src/pages/: error.rs  login.rs  mod.rs  page_404.rs
app/src/server_fns/: error.rs  mod.rs
client/: Cargo.toml
frontend/: Cargo.toml
frontend/src/: lib.rs
libs/lib-auth/: Cargo.toml
libs/lib-auth/src/: config.rs  lib.rs
libs/lib-auth/src/pwd/: error.rs  mod.rs
libs/lib-auth/src/pwd/scheme/: mod.rs  scheme_01.rs  scheme_02.rs
libs/lib-auth/src/token/: error.rs  mod.rs  session.rs
libs/lib-core/: Cargo.toml
libs/lib-core/src/: config.rs  error.rs  lib.rs
libs/lib-core/src/ctx/: error.rs  mod.rs
libs/lib-core/src/database/: error.rs  mod.rs
libs/lib-core/src/model/: app_state.rs  error.rs  mod.rs  session.rs  store.rs  user.rs
libs/lib-core/src/model/base/: mod.rs  utils.rs
libs/lib-core/src/service/: error.rs  login.rs  mod.rs  register.rs
libs/lib-utils/: Cargo.toml
libs/lib-utils/src/: b64.rs  envs.rs  error.rs  files.rs  lib.rs  time.rs
libs/lib-web/: Cargo.toml
libs/lib-web/src/: app_state.rs  cookies.rs  error.rs  lib.rs
server/: Cargo.toml
server/src/: error.rs  main.rs
server/src/model/: user.rs
server/src/web/: error.rs  mod.rs  routes_api.rs  routes_leptos.rs  routes_login.rs
server/src/web/middleware/: auth.rs  mod.rs  response_map.rs  stamp.rs
