[workspace]
resolver = "2"
members = ["app", "client", "libs/lib-utils", "server"]

# need to be applied only to wasm build
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
# -- Json
serde = { version = "1", features = ["derive"] }
# -- Leptos
leptos = { version = "0.6.12" }
# -- WASM
wasm-bindgen = "=0.2.92"
# -- Utils
derive_more = { version = "0.99.17", features = ["from"] }

# Leptos project configuration (ref: https://github.com/leptos-rs/cargo-leptos).
[[workspace.metadata.leptos]]
# Leptos project configuration
name = "webapp-ssr"
bin-package = "server"
lib-package = "client"
site-root = "target/dist"
site-pkg-dir = "pkg"

# JS, CSS & WASM file name (+ hash)
output-name = "asset"
hash-files = false    # for DEV hot reload

# Tailwind config
tailwind-input-file = "app/style/tailwind.css"
tailwind-config-file = "app/tailwind.config.js"

# Assets source dir
assets-dir = "public"

# IP and port
site-addr = "127.0.0.1:8080"
reload-port = 8081

# End-to-end testing
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

# Watch mode
watch = false

# Environnement
env = "DEV"
