[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- Leptos
leptos.workspace = true
leptos_meta = { version = "0.6.12", default-features = false }
leptos_router = { version = "0.6.12" }
# -- Utils
derive_more.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  # "dep:leptos_axum"
]

[dev-dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-test = "0.3.42"
web-sys = "0.3.69"
