[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
# -- Libs
lib-core = { path = "../libs/lib-core", optional = true }
lib-web = { path = "../libs/lib-web", optional = true }
# -- Json
serde.workspace = true
serde_json = "1"
# -- Leptos
leptos.workspace = true
leptos_meta = { version = "0.6.12", default-features = false }
leptos_router = { version = "0.6.12" }
leptos_axum = { workspace = true, optional = true }
# -- Web
axum = { workspace = true, optional = true }
web-sys = "0.3.69"
# -- Utils
derive_more.workspace = true
lazy-regex = "3.2.0"

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "lib-core",
  "lib-web",
  "leptos_axum",
  "axum",
]

[dev-dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-test = "0.3.42"
