[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# -- App (HTML)
app = { path = "../app", default-features = false, features = ["hydrate"] }
# -- Leptos
leptos = { workspace = true, features = ["hydrate"] }
# -- WASM
console_error_panic_hook = "0.1.7"
wasm-bindgen.workspace = true
