[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
# -- App (HTML)
app = { path = "../app", default-features = false, features = ["ssr"] }
# -- Libs
lib-utils = { path = "../libs/lib-utils" }
lib-auth = { path = "../libs/lib-auth" }
lib-core = { path = "../libs/lib-core" }
lib-web = { path = "../libs/lib-web" }
# -- Async
tokio = { workspace = true }
# -- Json
serde.workspace = true
serde_json = "1"
serde_with.workspace = true
# -- Leptos
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true
# -- Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
# -- Web
axum.workspace = true
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
# -- Utils
dotenv = "0.15.0"
derive_more.workspace = true
strum_macros = "0.25"
uuid = { version = "1", features = ["v4", "fast-rng"] }
tower-cookies = "0.10.0"
