[package]
name = "lib-auth"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils" }
# -- Json
serde = { workspace = true }
# -- Async
tokio = { workspace = true }
# -- Hashing (pwd-scheme01 & Token)
hmac = "0.12"
sha2 = "0.10"
# -- Hashing (pwd-scheme02)
argon2 = { version = "0.5", features = ["std"] }
# -- Others
uuid = { workspace = true }
lazy-regex = "3"
derive_more = { workspace = true }
enum_dispatch = "0.3"
