[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
# -- Libs
lib-utils = { path = "../lib-utils" }
lib-auth = { path = "../lib-auth" }
# -- Async
tokio = { workspace = true }
# -- Data (using sqlx 0.8 is still complicated with others helpers libs)
sqlx = { version = "0.7.4", features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "uuid",
] }
modql = { version = "0.3.4", features = ["with-sea-query"] }
sea-query = "0.30"
sea-query-binder = { version = "0.5", features = [
  "sqlx-sqlite",
  "with-uuid",
  "with-time",
] }
# -- Json
serde.workspace = true
serde_with.workspace = true
# -- Leptos
leptos.workspace = true
# -- Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
# -- Web
axum.workspace = true
# -- Utils
derive_more.workspace = true
uuid = { workspace = true }
time = { workspace = true }
lazy-regex = "3"
